Fix section paddings and tiles alignment

--- a/src/client/app/flogo.flows.import/components/import-flow.component.less
+++ b/src/client/app/flogo.flows.import/components/import-flow.component.less
@@ -18,7 +18,6 @@
 .flogo-flows-import-container{
   width: 128px;
   height: 18px;
-  font-family: "Source Sans Pro";
   font-size: 14px;
   font-weight: normal;
   font-style: normal;
@@ -32,7 +31,6 @@
 .flogo-flows-import-label {
   cursor: pointer;
   /*padding-left: 23px;*/
-  font-family: "Source Sans Serif";
   font-size: 14px;
   font-weight: normal;
   font-style: normal;
