--- a/src/client/app/flogo.flows/components/flows.component.less
+++ b/src/client/app/flogo.flows/components/flows.component.less
@@ -32,13 +32,15 @@ flogo-flows-import:hover{
 
 .flogo-flows-container-title{
   display: inline-block;
-  line-height: 35px;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  line-height: 24px;
   color: #666;
 }
 .flogo-flows-welcomeContainer{
-  width:100%;
-  height:370px;
   background-color: #fff;
+  padding-bottom: 60px;
+  width:100%;
 }
 .flogo-welcome-msg{
   width: 50%;
@@ -79,9 +81,7 @@ flogo-flows-import:hover{
   height: 200px;
   object-fit: contain;
 }
-.flogo-flows-container-header{
-  height: 136px;
-  padding-top: 30px;
+.flogo-flows-container-header {
   background: #eeeded;
 }
 .flogo-flows-container-header-container{
@@ -93,10 +93,16 @@ flogo-flows-import:hover{
   margin: 0 auto;
   width: 560px;
 }
-.flogo-flows-container-lists{
+
+.flogo-flows-container-body {
   margin: 0 auto;
-  padding: 30px 0 0;
   width: 90%;
+}
+
+.flogo-flows-container-lists{
+  margin: -20px -20px 0 -20px;
+  padding: 30px 0 0;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -104,7 +110,7 @@ flogo-flows-import:hover{
 
   .flogo-flows-container-list{
     display: flex;
-    margin: 0px @card-gutter-horizontal @card-gutter-vertical;
+    margin: @card-gutter-horizontal @card-gutter-vertical;
     border-radius: 4px;
     list-style: none;
     background-color: @card-bg-color;
@@ -223,8 +229,7 @@ flogo-flows-import:hover{
 .flogo-flows-container-new {
   border: 3px dashed #ccc;
   border-radius: 4px;
-  /*margin: 20px;
-  padding: 4px;*/
+  margin: @card-gutter-horizontal @card-gutter-vertical;
   width: 200px;
   height: 200px;
 }
